--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,19 @@
+
 /*Estilos da pagina index.html*/
+* {
+    padding: 0;
+    margin: 0;
+}
+
+p {
+    color:rgb(61, 54, 63)
+}
+
+.fundo {
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(241,227,235,1) 0%, rgba(231,215,227,1) 0%, rgba(227,210,224,1) 0%, rgba(224,207,222,1) 100%, rgba(255,254,255,1) 100%);
+}
+
 .center {
     text-align: center;
 }
